tests/ui/compile-fail/init/invalid_init.stderr
error[E0277]: the trait bound `impl pin_init::PinInit<Bar>: Init<Bar>` is not satisfied
  --> tests/ui/compile-fail/init/invalid_init.rs:18:13
   |
18 |       let _ = init!(Foo {
   |  _____________^
19 | |         bar <- Bar::new(),
20 | |     });
   | |      ^
   | |      |
   | |______the trait `Init<Bar>` is not implemented for `impl pin_init::PinInit<Bar>`
   |        required by a bound introduced by this call
   |
help: the following other types implement trait `Init<T, E>`
  --> src/lib.rs
   |
   | / unsafe impl<T: ?Sized, E, I, F> Init<T, E> for ChainInit<I, F, T, E>
   | | where
   | |     I: Init<T, E>,
   | |     F: FnOnce(&mut T) -> Result<(), E>,
   | |_______________________________________^ `ChainInit<I, F, T, E>`
...
   |   unsafe impl<T, E> Init<T, E> for Result<T, E> {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Result<T, E>`
   = note: this error originates in the macro `$crate::__init_internal` which comes from the expansion of the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
